Sidebar: Fixed collapsing sidebar.
Temporarily set minimum panel width CSS.

--- a/client/ide/styl/ide.styl
+++ b/client/ide/styl/ide.styl
@@ -125,6 +125,8 @@ body.ide.dark
       r-sprite          'finder', 'expanded'
       top               8px
 
+  .nfinder.file-container
+    min-width           234px
 
 // sidebar icons
 .ide-files-tab
